<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.yeti_llc.slot_machine.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Amount_Label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text=""
        android:textSize="12sp"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/Bank_Label"
        app:layout_constraintEnd_toStartOf="@+id/tvBankAmount"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSetValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:onClick="onSetValue"
        android:text="@string/Set_Value_Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bNewGame"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="360dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/bNewGame"
        android:onClick="onNewGame"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSetValue" />

    <Button
        android:id="@+id/bPullLever"
        android:layout_width="388dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Pull_Lever_Button"
        android:onClick="onPullLever"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvSlot_Three"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/bPullLever"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvSlot_One"
        android:layout_width="82dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/bPullLever"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSlot_Two"
        android:layout_width="83dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/bPullLever"
        app:layout_constraintEnd_toStartOf="@+id/tvSlot_Three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSlot_One" />

    <TextView
        android:id="@+id/tvBankAmount"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
